# litellm-proxy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  litellm_config.yaml  litellm_docker_compose.yaml  llm_config.yaml  mlpa_docker_compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-publish.yml  linters_and_tests.yml
alembic/: README  env.py
alembic/versions/: 482f016f00d7_create_keys_table.py  8c787d0fbdc8_create_challenges_table.py
docs/: index.html
scripts/: create-app-attest-database.sh
src/proxy/: run.py  test.py
src/proxy/core/: classes.py  completions.py  config.py  prometheus_metrics.py  utils.py
src/proxy/core/appattest/: __init__.py  appattest.py  config.py  middleware.py  schema.py
src/proxy/core/fxa/: __init__.py  fxa.py
src/proxy/core/pg_services/: app_attest_pg_service.py  key_pg_service.py  litellm_pg_service.py  pg_service.py  services.py
src/proxy/core/routers/appattest/: __init__.py  appattest.py  middleware.py
src/proxy/core/routers/fxa/: __init__.py  fxa.py
src/proxy/core/routers/health/: __init__.py  health.py
src/proxy/core/routers/user/: __init__.py  user.py
src/tests/: conftest.py  consts.py  mocks.py  test_app_attest.py  test_health.py  test_user.py
src/tests/integration/: conftest.py  test_app_attest.py  test_fxa.py  test_health.py  test_user.py
src/tests/unit/: test_completions.py  test_fxa.py  test_utils.py
